--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Dance-Info.org
+name: paulinekarega
 
 # Short bio or description (displayed in the header)
 description: Dancer out here trying to make the world a better place for other dancers
